--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <p><a href="1pamoka(Kelione)/Kelione.html">Kelione</a></p>
+        <p><a href="Kelione.html">Kelione</a></p>
         <p><a href="2pamoka(Receptas)/1puslapis.html">Receptas</a></p>
         <p><a href="3pamoka(Blogas)/Blogas.html">Blogas</a></p>
     </body>
