--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> Pradinis </title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="indexstyle.css">
     </head>
     <body>
         <div class="linkbox">
