--- a/3pamoka(Blogas)/ApieMane.html
+++ b/3pamoka(Blogas)/ApieMane.html
@@ -9,8 +9,8 @@
         <header class="over">
             <div class="overtext">Dainius</div>
                 <div class="quick"><a class="quicktext">Gmail</a></div>
-                <div class="quick"><a class="quicktext" href="3pamoka(Blogas)/blogas.html">Atgal</a></div>
-                <div class="quick"><a class="quicktext" href="3pamoka(Blogas)/blogas.html">Pradžia</a></div>
+                <div class="quick"><a class="quicktext" href="3pamoka(Blogas)/Blogas.html">Atgal</a></div>
+                <div class="quick"><a class="quicktext" href="3pamoka(Blogas)/Blogas.html">Pradžia</a></div>
         </header>
     </body>
 </html>
