--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="linkbox">
             <p><a class="links" href="1pamoka(Kelione)/Kelione.html">Kelionių į Italiją organizavimas</a></p>
             <p><a class="links" href="2pamoka(Receptas)/1puslapis.html">Gyozų receptas</a></p>
-            <p><a class="links" href="3pamoka(Blogas)/Blogas.html">Mano blogas</a></p>
+            <p><a class="links" href="3pamoka(Blogas)/Blog.html">Blogas</a></p>
         </div>
     </body>
 </html>
