--- a/3pamoka(Blogas)/Blog.html
+++ b/3pamoka(Blogas)/Blog.html
@@ -7,7 +7,7 @@
     </head>
     <body class="backdrop">
         <header class="over">
-            <div class="overtext">Team Bucciarati</div>
+            <div class="overtext">neveikia</div>
                 <div class="quick"><a class="quicktext" href="Aboutus.html">About us</a></div>
                 <div class="quick"><a class="quicktext" href="Blog.html">Home</a></div>
         </header>
