--- a/3pamoka(Blogas)/Blog.html
+++ b/3pamoka(Blogas)/Blog.html
@@ -3,7 +3,7 @@
     <head>
         <title>Team Bucciarati</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="Blogostiliai.css">
+        <link rel="stylesheet" type="text/css" href="blogostiliai.css">
     </head>
     <body class="backdrop">
         <header class="over">
